# mnstatus

./: README.md  pyproject.toml
.github/workflows/: update_node_status.yml
data/: node_status.csv  node_status.json  nodes.geojson
docs/: .nojekyll  index.html  index_cesium.html
mnstatus/: __init__.py  cli.py
