[tool.poetry]
name = "mnstatus"
version = "0.1.0"
description = "Report on the status of a member node"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
click = "^7.1.2"
dateparser = "^1.0.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mnstatus = "mnstatus.cli:main"
