[project]
name = "mnstatus"
version = "0.3.1"
description = "Report on the status of a member node"
authors = [{ name = "datadavev", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.12,<4"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.25.1,<3",
    "click>=7.1.2,<8",
    "dateparser>=1.0.0,<2",
    "xmltodict>=0.12.0,<0.13",
]

[project.scripts]
mnstatus = "mnstatus.cli:main"

[dependency-groups]
dev = []

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
